teamhome/iptables/rules.v4
# Generated by iptables-save v1.6.0 on Wed Mar  7 16:54:28 2018
*mangle
:PREROUTING ACCEPT [2628:1247209]
:INPUT ACCEPT [2628:1247209]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2370:607132]
:POSTROUTING ACCEPT [2376:607534]
COMMIT
# Completed on Wed Mar  7 16:54:28 2018
# Generated by iptables-save v1.6.0 on Wed Mar  7 16:54:28 2018
*security
:INPUT ACCEPT [2600:1242853]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2370:607132]
COMMIT
# Completed on Wed Mar  7 16:54:28 2018
# Generated by iptables-save v1.6.0 on Wed Mar  7 16:54:28 2018
*nat
:PREROUTING ACCEPT [22:3954]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [6:3153]
:POSTROUTING ACCEPT [6:3153]
COMMIT
# Completed on Wed Mar  7 16:54:28 2018
# Generated by iptables-save v1.6.0 on Wed Mar  7 16:54:28 2018
*raw
:PREROUTING ACCEPT [2628:1247209]
:OUTPUT ACCEPT [2370:607132]
COMMIT
# Completed on Wed Mar  7 16:54:28 2018
# Generated by iptables-save v1.6.0 on Wed Mar  7 16:54:28 2018
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [2370:607132]
:ICMP - [0:0]
:ICMPDROP - [0:0]
:INVDROP - [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j INVDROP
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p icmp -m conntrack --ctstate NEW -j ICMP
-A INPUT -j DROP
-A FORWARD -i virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j ACCEPT
-A FORWARD -m limit --limit 5/min -j LOG --log-prefix "iptables_FORWARD_drop: " --log-level 7
-A FORWARD -j DROP
-A OUTPUT ! -d 10.1.1.0/24 -p icmp -m icmp --icmp-type 0 -j ICMPDROP
-A ICMP -s 192.168.122.0/24 -p icmp -j ACCEPT
-A ICMP -s 10.1.1.0/24 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ICMP -p icmp -m icmp --icmp-type 8 -j ICMPDROP
-A ICMP -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ICMP -p icmp -m icmp --icmp-type 4 -j ACCEPT
-A ICMP -i virbr0 -p icmp -j ACCEPT
-A ICMP -p icmp -j ICMPDROP
-A ICMPDROP -m limit --limit 5/min -j LOG --log-prefix iptables_ICMP_DROPPED_TRAFFIC --log-level 7
-A ICMPDROP -p icmp -j DROP
-A INVDROP -m limit --limit 5/min -j LOG --log-prefix "iptables_INPUT_INVALID_drop: " --log-level 7
-A INVDROP -m conntrack --ctstate INVALID -j DROP
-A TCP -s 10.1.1.0/24 -p tcp -m tcp --dport 59033 -j ACCEPT
-A TCP -s 10.1.1.0/24 -p tcp -m tcp --dport 4000 -j ACCEPT
-A TCP -p tcp -m multiport --dports 9095,9096,9097,9098 -j ACCEPT
-A TCP -s 10.1.1.0/24 -p tcp -m tcp --dport 111 -j ACCEPT
-A TCP -s 10.1.1.0/24 -p tcp -m tcp --dport 2049 -j ACCEPT
-A TCP -s 10.1.1.0/24 -p tcp -m tcp --dport 5666 -j ACCEPT
-A TCP -s 10.1.1.0/24 -p tcp -m tcp --dport 5667 -j ACCEPT
-A TCP -s 10.1.1.0/24 -p tcp -m tcp --dport 5668 -j ACCEPT
-A TCP -s 192.168.122.0/24 -p tcp -j ACCEPT
-A TCP -i virbr0 -p tcp -j ACCEPT
-A UDP -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A UDP -s 10.1.1.0/24 -p udp -m udp --dport 111 -j ACCEPT
-A UDP -s 10.1.1.0/24 -p udp -m udp --dport 5666 -j ACCEPT
-A UDP -s 10.1.1.0/24 -p udp -m udp --dport 5667 -j ACCEPT
-A UDP -s 10.1.1.0/24 -p udp -m udp --dport 5668 -j ACCEPT
-A UDP -s 192.168.122.0/24 -p udp -j ACCEPT
-A UDP -i virbr0 -p udp -j ACCEPT
-A UDP -s 10.1.1.0/24 -p udp -m udp --dport 4000 -j ACCEPT
COMMIT
# Completed on Wed Mar  7 16:54:28 2018
